[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/views/remote/components/peer_item.gd" type="Script" id=1]
[ext_resource path="res://ui/common/auto_scale.gd" type="Script" id=2]

[node name="PeerConnexion" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -682.0
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 14.0
margin_top = 14.0
margin_right = 1352.0
margin_bottom = 72.0

[node name="Icon" type="TextureRect" parent="HBoxContainer"]
margin_bottom = 58.0
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 8.0
margin_right = 1194.0
margin_bottom = 58.0
size_flags_horizontal = 3

[node name="PeerLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 1186.0
margin_bottom = 25.0
text = "Peer name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TemplateLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_top = 33.0
margin_right = 1186.0
margin_bottom = 58.0
text = "No template information found"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 1202.0
margin_right = 1210.0
margin_bottom = 58.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 1218.0
margin_right = 1338.0
margin_bottom = 58.0
rect_min_size = Vector2( 120, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
min_size_x = true

[node name="StatusLabel" type="Label" parent="HBoxContainer/HBoxContainer"]
margin_top = 16.0
margin_right = 42.0
margin_bottom = 41.0
text = "Idle"
